--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,43 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+    <!-- <button class="middle-btn ">
+      <img src="./../src/assets/img/heart.svg" alt="Favorite" class="header__btn-icon">
+      <span>Favorite</span>
+    </button>
+    <button class="middle-btn middle-btn--active">
+      <img src="./../src/assets/img/heart.svg" alt="Favorite" class="header__btn-icon">
+      <span>Favorite</span>
+    </button>
+    <button class="header__nav-btn header__nav-btn--active">
+      <img src="./../src/assets/img/menu.svg" alt="Catalog" class="header__nav-icon">
+      Catalog
+    </button>
+    <button class="header__nav-btn">
+      <img src="./../src/assets/img/scales.svg" alt="Catalog" class="header__nav-icon">
+      Catalog
+    </button>
+
+    <form class="header__form">
+      <input type="search" placeholder="Быстрый поиск">
+      <button type="submit"></button> 
+    </form> -->
+
+    <header class="header">
+      <div class="header__top">
+
+      </div>
+
+      <div class="container">
+        <div class="header__mid">
+
+        </div>
+
+        <div class="header__bottom">
+          
+        </div>
+      </div>
+    </header>
 </body>
 </html>
+
