Add Styles for header__top

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,9 +43,17 @@
 
           <div class="header__top-menu">
             <ul>
-              <li><a href="#">Магазины</a></li>
-              <li><a href="#">Покупателям</a></li>
-              <li><a href="#">Юридическим лицам</a></li>
+              <li>
+                <a href="#">Магазины</a>
+              </li>
+              <li>
+                <a href="#">Покупателям</a>
+                <img src="./../src/assets/img/arrow.svg" alt="">
+              </li>
+              <li>
+                <a href="#">Юридическим лицам</a>
+                <img src="./../src/assets/img/arrow.svg" alt="">
+              </li>
             </ul>
           </div>
 
